# mcp_pyphotomol

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/workflows/: build.yaml  docs.yaml  release.yaml  test.yaml
docs/: conf.py  description.rst  index.rst  installation.rst  modules.rst  usage.rst
docs/_static/: custom.css
example_data/: masses_monomer_16nM.csv  masses_monomer_32nM.csv  masses_monomer_4nM.csv  masses_monomer_8nM.csv
src/mcp_pyphotomol/: __init__.py  main.py  mcp.py  paths.py  server.py  stdio.py
src/mcp_pyphotomol/example_data/: masses_monomer_1nM.csv  masses_monomer_2nM.csv  masses_monomer_64nM.csv
src/mcp_pyphotomol/resources/: __init__.py  _photomol.py
src/mcp_pyphotomol/tools/: __init__.py  _photomol.py
tests/: conftest.py  test_app.py
