[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "mcp_pyphotomol"
version = "0.1.1"
description = "Analysis of mass photometry data"
readme = "README.md"
license = { file = "LICENSE" }
maintainers = [
  { name = "Osvaldo Burastero", email = "oburastero@gmail.com" },
]
authors = [
  { name = "Osvaldo Burastero" },
]
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  # for debug logging (referenced from the issue template)
  # "session-info2",
  "click",
  "fastmcp",
  "h5py>=3.15.1",
  "kaleido>=1.2.0",
  "mcp[cli]>=1.26.0",
  "numpy>=2.4.2",
  "pandas>=3.0.1",
  "plotly>=6.6.0",
  "pyphotomol>=0.1.5",
  "scipy>=1.17.1",
]
optional-dependencies.dev = [
  "pre-commit",
  "twine>=4.0.2",
]
optional-dependencies.doc = [
  "docutils>=0.8,!=0.18.*,!=0.19.*",
  "ipykernel",
  "ipython",
  "nbsphinx>=0.9.7",
  "numpydoc>=1.6.0",
  "pandas",
  # Until pybtex >0.24.0 releases: https://bitbucket.org/pybtex-devs/pybtex/issues/169/
  "setuptools",
  "sphinx>=8.1",
  "sphinx-copybutton",
  "sphinx-design>=0.5.0",
  "sphinx-rtd-theme>=3.1.0",
]
optional-dependencies.test = [
  "coverage",
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
]
# https://docs.pypi.org/project_metadata/#project-urls
urls.Documentation = "https://github.com/osvalB/mcp_pyphotomol/tree/main/docs"
urls.Homepage = "https://github.com/osvalB/mcp_pyphotomol"
urls.Source = "https://github.com/osvalB/mcp_pyphotomol"

scripts.mcp_pyphotomol = "mcp_pyphotomol.main:run_app"

[tool.hatch.build.targets.wheel]
packages = [ "src/mcp_pyphotomol" ]


[tool.hatch.envs.default]
installer = "uv"
features = [ "dev" ]

[tool.hatch.envs.docs]
features = [ "doc" ]
scripts.build = "python -m sphinx -M html docs docs/_build -W {args}"
scripts.open = "python -m webbrowser -t docs/_build/html/index.html"
scripts.clean = "git clean -fdX -- {args:docs}"

# Test the lowest and highest supported Python versions with normal deps
[[tool.hatch.envs.hatch-test.matrix]]
deps = [ "stable" ]
python = [ "3.11", "3.13" ]

# Test the newest supported Python version also with pre-release deps
[[tool.hatch.envs.hatch-test.matrix]]
deps = [ "pre" ]
python = [ "3.13" ]

[tool.hatch.envs.hatch-test]
features = [ "test" ]

[tool.hatch.envs.hatch-test.overrides]
# If the matrix variable `deps` is set to "pre",
# set the environment variable `UV_PRERELEASE` to "allow".
matrix.deps.env-vars = [
  { key = "UV_PRERELEASE", value = "allow", if = [ "pre" ] },
]

[tool.ruff]
line-length = 120
src = [ "src" ]
extend-include = [ "*.ipynb" ]

format.docstring-code-format = true

lint.select = [
  "B",      # flake8-bugbear
  "BLE",    # flake8-blind-except
  "C4",     # flake8-comprehensions
  "D",      # pydocstyle
  "E",      # Error detected by Pycodestyle
  "F",      # Errors detected by Pyflakes
  "I",      # isort
  "RUF100", # Report unused noqa directives
  "TID",    # flake8-tidy-imports
  "UP",     # pyupgrade
  "W",      # Warning detected by Pycodestyle
]
lint.ignore = [
  "B008", # Errors from function calls in argument defaults. These are fine when the result is immutable.
  "D100", # Missing docstring in public module
  "D104", # Missing docstring in public package
  "D105", # __magic__ methods are often self-explanatory, allow missing docstrings
  "D107", # Missing docstring in __init__
  # Disable one in each pair of mutually incompatible rules
  "D203", # We don’t want a blank line before a class docstring
  "D213", # <> We want docstrings to start immediately after the opening triple quote
  "D400", # first line should end with a period [Bug: doesn’t work with single-line docstrings]
  "D401", # First line should be in imperative mood; try rephrasing
  "E501", # line too long -> we accept long comment lines; formatter gets rid of long code lines
  "E731", # Do not assign a lambda expression, use a def -> lambda expression assignments are convenient
  "E741", # allow I, O, l as variable names -> I is the identity matrix
]
lint.per-file-ignores."*/__init__.py" = [ "F401" ]
lint.per-file-ignores."docs/*" = [ "I" ]
lint.per-file-ignores."tests/*" = [ "D" ]
lint.pydocstyle.convention = "numpy"

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = [ "tests" ]
python_files = "test_*.py"
python_functions = "test_*"
xfail_strict = true
addopts = [
  "--import-mode=importlib", # allow using test files with same name
  "--cov=mcp_pyphotomol",
  "--cov-report=term-missing",
]

[tool.coverage.run]
source = [ "src/mcp_pyphotomol" ]
omit = [
  "*/tests/test_*.py",
]
